# Ditherum

./: .gitignore  Cargo.toml  README.md
benches/: kernels_2x2_benchmark.rs
res/test_palettes/: test_corrupted_palette.json  test_ok_palette.json
src/: color.rs  errors.rs  image.rs  lib.rs  palette.rs  utils.rs
src/algorithms/: color_manip.rs  dithering.rs  image_proc.rs  kernel.rs  kmean.rs  mod.rs  thresholding.rs
tests/: common.rs  integration_tests.rs
