[package]
name = "ditherum"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.24"
env_logger = "0.11.6"
thiserror = "2.0.11"

rand = "0.9.0"
num_cpus = "1.16.0"

clap = { version = "4.5.31", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

image = "0.25.5"
palette = "0.7.6"

#[bin.dependencies]
# TODO https://stackoverflow.com/questions/35711044/how-can-i-specify-binary-only-dependencies
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
logging = [] # Enable this feature to see the logs: place it in 'default' or use build flag --features logging

[[bench]]
name = "kernels_2x2_benchmark"
harness = false